added page to select the language

--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -1,4 +1,4 @@
-<ion-content scroll="false">
+<ion-content scroll="false" no-bounce>
   <div class="splash-bg"></div>
   <div class="splash-info">
     <div class="splash-logo"></div>
