--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -22,7 +22,7 @@
 
       <ion-item>
         <ion-label>{{ 'SETTINGS_SELECT_LANG' | translate }}</ion-label>
-        <ion-select interface="popover" class="selector" formControlName="optionLang" [(ngModel)]="selectedLang">
+        <ion-select interface="action-sheet" class="selector" formControlName="optionLang" [(ngModel)]="selectedLang">
           <ion-option class="option" value="es">{{ 'SETTINGS_LANG_SPANISH' | translate }}</ion-option>
           <ion-option class="option" value="ar">{{ 'SETTINGS_LANG_ARABIC' | translate }}</ion-option>
         </ion-select>
