Created service to add item and update

--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content scroll="false" no-bounce>
     <ion-grid>
       <ion-row>
         <form (submit)="doSignup()">
