--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 
-<ion-content scroll="false" no-bounce>
+<ion-content scroll="false">
   <ion-grid>
       <ion-row>
         <ion-col>
@@ -13,21 +13,12 @@
             <ion-list>
 
               <ion-item>
-                <ion-label fixed>{{ 'EMAIL' | translate }}</ion-label>
+                <ion-label floating>{{ 'EMAIL' | translate }}</ion-label>
                 <ion-input type="email" [(ngModel)]="account.email" name="email"></ion-input>
               </ion-item>
 
-              <!--
-              Want to use a Username instead of an Email? Here you go:
-
               <ion-item>
-                <ion-label floating>{{ 'USERNAME' | translate }}</ion-label>
-                <ion-input type="text" [(ngModel)]="account.username" name="username"></ion-input>
-              </ion-item>
-              -->
-
-              <ion-item>
-                <ion-label fixed>{{ 'PASSWORD' | translate }}</ion-label>
+                <ion-label floating>{{ 'PASSWORD' | translate }}</ion-label>
                 <ion-input type="password" [(ngModel)]="account.password" name="password"></ion-input>
               </ion-item>
 
