--- a/src/pages/item-create/item-create.html
+++ b/src/pages/item-create/item-create.html
@@ -25,8 +25,7 @@
 
 <ion-content>
   <form *ngIf="form" [formGroup]="form" (ngSubmit)="createItem()">
-    <take-picture (dataToEmmit)="handlePictureBtn($event)" [profilePic] = "form.controls.profilePic.value"></take-picture>
-
+    <take-picture (dataToEmmit)="handlePictureBtn($event)"></take-picture>
     <ion-list>
       <ion-item>
         <ion-input type="text" placeholder="{{ 'ITEM_NAME_PLACEHOLDER' | translate }}" formControlName="name"></ion-input>
