Refactored services to upload items and images

--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -14,14 +14,13 @@
 
 <ion-content scroll="false">
   <div class="card-background-page">
-    <!-- <ion-card *ngFor="let item of currentItems">
+    <ion-card *ngFor="let item of currentItems">
       <span (click)="openItem(item)">
-        <img [src]="item.profilePic"/>
+        <img [src]="item.profileItem"/>
         <div class="description">
-          <div class="card-title">{{item.name}}</div>
-          <div class="card-subtitle">{{item.about}}</div>
+          <div class="card-title">{{item.price}}</div>
         </div>
       </span>
-    </ion-card> -->
+    </ion-card>
   </div>
 </ion-content>
