--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -15,7 +15,7 @@
 <ion-content scroll="false">
   <div class="card-background-page">
     <ion-card *ngFor="let item of currentItems">
-      <span (click)="openItem()">
+      <span (click)="openItem(item.uuid)">
         <img [src]="item.profileItem"/>
         <div class="description">
           <div class="card-title">{{item.price}}</div>
