--- a/src/pages/item-detail/item-detail.html
+++ b/src/pages/item-detail/item-detail.html
@@ -1,18 +1,29 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{ item.name }}</ion-title>
+    <ion-buttons right>
+      <button ion-button>
+        <ion-icon name="more"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-title>{{ itemDetails?.name }}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content>
-  <div class="item-profile" text-center #profilePic [style.background-image]="'url(' + item.profilePic + ')'">
+  <div class="item-profile" *ngIf="itemDetails" spaceBetween="10px">
+    <ion-slides paginationType="bullets" pager="true" dir="rtl" centeredSlides="true">
+      <ion-slide *ngFor="let slide of itemDetails.imagesItem">
+        <img [src]="slide">
+      </ion-slide>
+    </ion-slides>
   </div>
 
-  <div class="item-detail" padding>
-    <h2>{{item.name}}</h2>
-    <p>{{item.about}}</p>
+  <div *ngIf="itemDetails" class="item-detail" padding>
+    <p>{{'DETAILS_ITEM_LAST_UPDATE' | translate}} : {{itemDetails.timestamp | date:'shortDate'}}</p>
+    <h2>{{itemDetails.price}}</h2>
+    <p>{{itemDetails.about}}</p>
   </div>
 </ion-content>
