--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -1,22 +1,39 @@
 <ion-header>
-
   <ion-navbar>
     <ion-title>{{ 'SEARCH_TITLE' | translate }}</ion-title>
+    <ion-buttons right>
+      <button ion-button (click)="acceptFilter()">
+        <span color="primary" showWhen="ios">
+          {{ 'DONE_BUTTON' | translate }}
+        </span>
+        <ion-icon name="md-checkmark" showWhen="core,android,windows"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
-
 </ion-header>
-
-
 <ion-content>
-  <ion-searchbar (ionInput)="getItems($event)" placeholder="{{ 'SEARCH_PLACEHOLDER' | translate }}"></ion-searchbar>
-  <ion-list>
-    <button ion-item (click)="openItem(item)" *ngFor="let item of currentItems">
-      <ion-avatar item-start>
-        <img [src]="item.profilePic" />
-      </ion-avatar>
-      <h2>{{item.name}}</h2>
-      <p>{{item.about}}</p>
-      <ion-note item-end *ngIf="item.note">{{item.note}}</ion-note>
-    </button>
-  </ion-list>
-</ion-content>
+    <form *ngIf="form && !statusSearch" [formGroup]="form">
+      <ion-list>
+        <ion-row>
+          <ion-item col-12>
+            <ion-label floating>{{ 'ITEM_NAME_PLACEHOLDER' | translate }}</ion-label>
+            <ion-input type="text" formControlName="name"></ion-input>
+          </ion-item>
+          <ion-item col-8>
+            <ion-label floating>{{ 'ITEM_PRICE_PLACEHOLDER' | translate }}</ion-label>
+            <ion-input type="number" max="9" formControlName="price"></ion-input>
+          </ion-item>
+          <ion-item col-12>
+            <ion-label floating>{{ 'ITEM_CATEGORY_PLACEHOLDER' | translate }}</ion-label>
+            <ion-select interface="action-sheet" formControlName="category">
+              <ion-option *ngFor="let category of categories" [value]="category.value">{{category.name}}</ion-option>
+            </ion-select>
+          </ion-item>
+        </ion-row>
+      </ion-list>
+    </form>
+
+  <card-item *ngIf="statusSearch" [dataItems] = "currentItems" (dataToEmmit)="handleItemBtn($event)"></card-item>
+
+  </ion-content>
+
