Added delete item feature and refactored popover and take-picture.comp

--- a/src/pages/item-detail/item-detail.html
+++ b/src/pages/item-detail/item-detail.html
@@ -1,8 +1,14 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-buttons right>
-      <button ion-button>
+    <ion-buttons class="options" right>
+      <button icon-only ion-button>
+        <ion-icon name="heart"></ion-icon>
+      </button>
+      <button icon-only ion-button>
+        <ion-icon name="share"></ion-icon>
+      </button>
+      <button icon-only ion-button (click)="presentPopover($event)">
         <ion-icon name="more"></ion-icon>
       </button>
     </ion-buttons>
