--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -14,13 +14,18 @@
           <ion-list>
 
             <ion-item>
+              <ion-label fixed>{{ 'FIRST_NAME' | translate }}</ion-label>
+              <ion-input type="text" [(ngModel)]="userToRegister.firsName" name="firsName"></ion-input>
+            </ion-item>
+
+            <ion-item>
               <ion-label fixed>{{ 'EMAIL' | translate }}</ion-label>
-              <ion-input type="email" [(ngModel)]="account.email" name="email"></ion-input>
+              <ion-input type="email" [(ngModel)]="userToRegister.email" name="email"></ion-input>
             </ion-item>
 
             <ion-item>
               <ion-label fixed>{{ 'PASSWORD' | translate }}</ion-label>
-              <ion-input type="password" [(ngModel)]="account.password" name="password"></ion-input>
+              <ion-input type="password" [(ngModel)]="userToRegister.password" name="password"></ion-input>
             </ion-item>
 
             <div padding>
