--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 
-<ion-content scroll="false" no-bounce>
+<ion-content scroll="false">
     <ion-grid>
       <ion-row>
         <form (submit)="doSignup()">
