Changed name firsName to firstName

--- a/src/pages/profile-user/profile-user.html
+++ b/src/pages/profile-user/profile-user.html
@@ -18,7 +18,7 @@
           <div class="avatar-img-80" [style.background-image]="'url(' + userInformation.pictureURL?.pathOfImage + ')'"></div>
         </div>
         <div class="counter-sales" item-end>
-          <h2>{{userInformation.firsName}} {{userInformation.lastName}}</h2>
+          <h2>{{userInformation.firstName}} {{userInformation.lastName}}</h2>
           <ul>
             <li>{{'PROFILE_USER_DETAIL_COUNTER_SALES' | translate}} <b>8</b></li>
             <li>{{'PROFILE_USER_DETAIL_COUNTER_SHOPPING' | translate}} <b>15</b></li>
