--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -15,7 +15,7 @@
 
             <ion-item>
               <ion-label fixed>{{ 'FIRST_NAME' | translate }}</ion-label>
-              <ion-input type="text" [(ngModel)]="userToRegister.firsName" name="firsName"></ion-input>
+              <ion-input type="text" [(ngModel)]="userToRegister.firstName" name="firstName"></ion-input>
             </ion-item>
 
             <ion-item>
