--- a/src/pages/user-edit/user-edit.html
+++ b/src/pages/user-edit/user-edit.html
@@ -32,7 +32,7 @@
       <ion-list>
         <ion-item>
           <ion-label floating>{{ 'FIRST_NAME' | translate }}</ion-label>
-          <ion-input type="text" formControlName="firsName"></ion-input>
+          <ion-input type="text" formControlName="firstName"></ion-input>
         </ion-item>
 
         <ion-item>
