--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -15,7 +15,12 @@
 </ion-header>
 
 <ion-content scroll="false">
-  <ion-refresher (ionRefresh)="doRefresh($event)">
+  <ion-refresher
+  (ionRefresh)="doRefresh($event)"
+  pullingIcon="arrow-dropdown"
+  pullingText="Pull to refresh"
+  refreshingSpinner="circles"
+  refreshingText="Refreshing...">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
   <card-item [dataItems] = "paginationService.itemsData$" (dataToEmmit)="handleItemBtn($event)"></card-item>
